# svelte-bug-wasm

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  debug.sh  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/: app.d.ts  app.html
src/lib/wasm/: README.md  package.json
src/lib/wasm/src/: lib.rs
src/routes/: +layout.svelte  +page.svelte  _generatedFailingRoot.svelte
