[package]
name = "svelte-bug-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Gallups <daniel@protonmail.com>"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/lib/wasm/src/lib.rs"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
incremental = false
debug = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]


[dependencies]
wasm-bindgen = "0.2"
